--- a/iphone/Maps/Classes/CustomAlert/Toast/MWMToast.xib
+++ b/iphone/Maps/Classes/CustomAlert/Toast/MWMToast.xib
@@ -16,10 +16,10 @@
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <visualEffectView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" id="SVu-ra-Hl5">
+        <visualEffectView opaque="NO" contentMode="scaleToFill" id="SVu-ra-Hl5">
             <rect key="frame" x="0.0" y="0.0" width="240" height="64"/>
             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
-            <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="0Xo-JU-ane">
+            <view key="contentView" opaque="NO" multipleTouchEnabled="YES" contentMode="center" id="0Xo-JU-ane">
                 <rect key="frame" x="0.0" y="0.0" width="240" height="64"/>
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 <subviews>
@@ -41,6 +41,18 @@
                     <constraint firstItem="mPe-i4-dRq" firstAttribute="top" secondItem="0Xo-JU-ane" secondAttribute="top" constant="32" id="fID-cb-97V"/>
                 </constraints>
                 <userDefinedRuntimeAttributes>
+                    <userDefinedRuntimeAttribute type="size" keyPath="layer.shadowOffset">
+                        <size key="value" width="0.0" height="4"/>
+                    </userDefinedRuntimeAttribute>
+                    <userDefinedRuntimeAttribute type="color" keyPath="layer.shadowUIColor">
+                        <color key="value" red="0.0" green="0.0" blue="0.0" alpha="0.28000000000000003" colorSpace="custom" customColorSpace="sRGB"/>
+                    </userDefinedRuntimeAttribute>
+                    <userDefinedRuntimeAttribute type="number" keyPath="layer.shadowRadius">
+                        <integer key="value" value="4"/>
+                    </userDefinedRuntimeAttribute>
+                    <userDefinedRuntimeAttribute type="number" keyPath="layer.shadowOpacity">
+                        <integer key="value" value="1"/>
+                    </userDefinedRuntimeAttribute>
                     <userDefinedRuntimeAttribute type="string" keyPath="backgroundColorName" value="toastBackground"/>
                 </userDefinedRuntimeAttributes>
             </view>
