--- a/android/res/layout/map_navigation_buttons.xml
+++ b/android/res/layout/map_navigation_buttons.xml
@@ -7,12 +7,6 @@
   android:padding="@dimen/nav_frame_padding"
   android:theme="?navButtonsTheme">
 
-  <Space
-    android:id="@+id/anchor_center"
-    android:layout_width="0dp"
-    android:layout_height="0dp"
-    android:layout_centerInParent="true"/>
-
   <ImageButton
     android:id="@+id/traffic"
     style="@style/MwmWidget.MapButton.Traffic"
@@ -23,28 +17,29 @@
     tools:src="@drawable/anim_traffic_loading"/>
 
   <ImageButton
-    android:id="@+id/nav_zoom_out"
-    style="@style/MwmWidget.MapButton"
-    android:layout_alignParentEnd="true"
-    android:layout_alignParentRight="true"
-    android:layout_below="@id/anchor_center"
-    android:src="@drawable/ic_zoom_out"/>
-
-  <ImageButton
-    android:id="@+id/nav_zoom_in"
-    style="@style/MwmWidget.MapButton"
-    android:layout_above="@id/anchor_center"
-    android:layout_alignParentEnd="true"
-    android:layout_alignParentRight="true"
-    android:src="@drawable/ic_zoom_in"/>
-
-  <ImageButton
     android:id="@+id/my_position"
     style="@style/MwmWidget.MapButton"
     android:layout_alignParentEnd="true"
     android:layout_alignParentRight="true"
-    android:layout_below="@id/nav_zoom_out"
-    android:layout_marginTop="@dimen/margin_double"
+    android:layout_alignParentBottom="true"
+    android:layout_marginBottom="@dimen/nav_my_position_bottom"
     android:contentDescription="@string/my_position"
     android:tint="@null"/>
+
+  <ImageButton
+    android:id="@+id/nav_zoom_out"
+    style="@style/MwmWidget.MapButton"
+    android:layout_alignParentEnd="true"
+    android:layout_alignParentRight="true"
+    android:layout_below="@+id/nav_zoom_in"
+    android:src="@drawable/ic_zoom_out"/>
+
+  <ImageButton
+    android:id="@id/nav_zoom_in"
+    style="@style/MwmWidget.MapButton"
+    android:src="@drawable/ic_zoom_in"
+    android:layout_marginTop="@dimen/nav_zoom_top"
+    android:layout_alignParentTop="true"
+    android:layout_alignParentRight="true"
+    android:layout_alignParentEnd="true"/>
 </RelativeLayout>
