--- a/android/res/values/dimens.xml
+++ b/android/res/values/dimens.xml
@@ -63,6 +63,7 @@
   <dimen name="margin_compass_top">28dp</dimen>
   <dimen name="margin_ruler_left">10dp</dimen>
   <dimen name="margin_ruler_bottom">58dp</dimen>
+  <dimen name="compass_height">40dp</dimen>
 
   <!-- routing layout -->
   <dimen name="routing_info_height">48dp</dimen>
@@ -112,7 +113,9 @@
   <dimen name="nav_frame_padding">@dimen/margin_eighth</dimen>
   <dimen name="nav_button">28dp</dimen>
   <dimen name="nav_zoom_bottom">160dp</dimen>
+  <dimen name="nav_zoom_top">258dp</dimen>
   <dimen name="nav_button_top_limit">68dp</dimen>
+  <dimen name="nav_my_position_bottom">136dp</dimen>
 
   <dimen name="panel_elevation">12dp</dimen>
   <dimen name="appbar_elevation">4dp</dimen>
